# Faro

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  index.html
Server/: wrangler.toml
Server/src/: cardmodel.cpp  cardmodel.h  casekeeper.h  gameengine.cpp  gameengine.h  index.ts  main.cpp  playermodel.cpp  playermodel.h
docs/arc42/: 01-introduction-and-goals.md  02-architecture-constraints.md  03-system-scope-and-context.md  04-solution-strategy.md  05-building-block-view.md  06-runtime-view.md  07-deployment-view.md  08-crosscutting-concepts.md  09-architecture-decisions.md  10-quality-requirements.md  11-risks-and-technical-debt.md  12-glossary.md  README.md
qml/: Main.qml
qml/components/: BettingChip.qml  Card.qml  CardFan.qml  CaseKeeper.qml  ChipStack.qml  DealerBox.qml  FaroTable.qml  FlyingCard.qml  FlyingChip.qml  GoldText.qml  InitialsEntry.qml  LeaderboardPanel.qml  ParticleOverlay.qml  PlayerPanel.qml  PlayerTray.qml
qml/views/: GameView.qml  ResultsView.qml  SettingsView.qml  TitleScreen.qml
src/: aiplayer.cpp  aiplayer.h  appsettings.cpp  appsettings.h  cardmodel.cpp  casekeeper.cpp  gameengine.cpp  gameengine.h  main.cpp  multiplayerclient.cpp  multiplayerclient.h  playermodel.cpp  playermodel.h
